# Coinsta

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
coinsta/: __init__.py  core.py  exceptions.py  utils.py
examples/: examples.py
tests/: README.md  test_coinsta.py
