[metadata]
name=coinsta
version=0.1.8
url=https://github.com/PyDataBlog/Coinsta
author=Bernard Brenyah
author_email=bbrenyah@gmail.com
description=A Python package for acquiring both historical and current data of cryptocurrencies
long_description=file:README.md
long_description_content_type=text/markdown
license=BSD 3-Clause License
classifiers=
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: BSD License

[options]
zip_safe=true
setup_requires=
    pytest-runner
install_requires=
    pandas == 1.0.1
    lxml == 4.5.0
    requests == 2.20.0
    html5lib == 1.0.1
packages=find:
tests_require=
    pytest

[options.packages.find]
exclude =
    tests
    examples

[aliases]
test=pytest